nexus/pod-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-0-service
  namespace: nexus
spec:
  ports:
    - name: http-main
      port: 8081
      protocol: TCP
      targetPort: 8081
    - name: http-docker-rep
      port: 8123
      protocol: TCP
      targetPort: 8123
  selector:
    app: nexus
    group: service
    statefulset.kubernetes.io/pod-name: nexus-0
